# poke-siritori

./: .gitignore  README.md  app.py  debug.py  inference.py  main.py  pokemon_names.csv  pokemon_names_raw.csv  pyproject.toml  requirements.txt  result.txt  tokenizer.pkl
runs/pokemon_siritori/: events.out.tfevents.1735575572.tomoyaf-desktop.369528.0
