[tool.poetry]
name = "poke-siritori"
version = "0.1.0"
description = ""
authors = ["tomoyaf <gazimum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.3"
torch = "^2.5.1"
jaconv = "^0.4.0"
tqdm = "^4.67.1"
numpy = "^2.2.1"
tensorboard = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
